Adding images api endpoint to swagger
