# citations-api/src/main/java/org/gso/citations_api/endpoint/CitationController.java
@@ -12,6 +12,8 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
+
 
 import java.time.LocalDateTime;
 import java.util.List;
@@ -38,8 +40,8 @@ public class CitationController {
 
 
     @GetMapping("/random")
-    public ResponseEntity<CitationDto> getRandomCitation() {
-        return ResponseEntity.ok(citationService.getRandomCitation().toDto());
+    public ResponseEntity getRandomCitation(JwtAuthenticationToken principal) {
+        return ResponseEntity.ok(principal);
     }
 
     @PostMapping(consumes = { MediaType.APPLICATION_JSON_VALUE })
